--- a/input.css
+++ b/input.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-image: url("../images/bg-header-desktop.png");
+    background-image: url("dist/images/bg-header-desktop.png");
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -33,6 +33,6 @@ body {
 }
 @media(max-width: 576px){
     body{
-        background-image: url("../images/bg-header-mobile.png");
+        background-image: url("dist/images/bg-header-mobile.png");
     }
 }
